[package]
name = "poolberry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
base64 = "0.22.1"
bincode = "1.3.3"
env_logger = { version = "0.11.6", features = ["color"] }
futures-util = "0.3.31"
log = "0.4.25"
serde = "1.0.218"
serde_json = "1.0.138"
solana-account-decoder-client-types = "2.2.0"
solana-client = "2.2.0"
solana-commitment-config = "2.2.1"
solana-sdk = "2.2.1"
solana-transaction-status-client-types = "2.2.0"
tokio = { version = "1.43.0", features = ["full"] }
